--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==4.0.3
+django-heroku==0.3.1
 future==0.16.0
+psycopg2==2.9.3
 rubik-solver==0.2.0
 sqlparse==0.4.2
+whitenoise==6.0.0
