--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 Django==4.0.3
 django-heroku==0.3.1
 future==0.16.0
+gunicorn==20.1.0
 psycopg2==2.9.3
 rubik-solver==0.2.0
 sqlparse==0.4.2
