--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,35 @@
-asgiref==3.5.0
-backports.zoneinfo==0.2.1
-dj-database-url==0.5.0
-Django==4.0.3
-django-heroku==0.3.1
+asgiref==3.6.0
+blinker==1.4
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info===1.1build1
+Django==4.1.5
 future==0.16.0
-gunicorn==20.1.0
-psycopg2==2.9.3
+httplib2==0.20.2
+importlib-metadata==4.6.4
+jeepney==0.7.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.3.0+ubuntu2.1
+PyYAML==5.4.1
 rubik-solver==0.2.0
-sqlparse==0.4.2
-whitenoise==6.0.0
+SecretStorage==3.3.1
+six==1.16.0
+sqlparse==0.4.3
+systemd-python==234
+ubuntu-advantage-tools==27.12
+ufw==0.36.1
+unattended-upgrades==0.1
+wadllib==1.3.6
+whitenoise==6.3.0
+zipp==1.0.0
